--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.70.5",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^5.2.0",
+    "react-native-paper-dates": "^0.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
