--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/netinfo": "^9.3.7",
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
@@ -20,6 +20,7 @@
     "@types/react-native": "~0.70.6",
     "aws-amplify": "^5.0.15",
     "aws-amplify-react-native": "^7.0.2",
+    "axios": "^1.3.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
