--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -31,6 +31,7 @@
     "react-native-paper-dates": "^0.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.3.0",
     "react-native-web": "~0.18.9",
     "typescript": "^4.6.3"
   },
