--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/core": "^5.0.16",
+    "@aws-amplify/datastore": "^4.0.16",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
