--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -26,6 +26,9 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.0",
+    "mobx-state-tree": "^5.1.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
