--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-select-dropdown": "^3.3.0",
     "react-native-web": "~0.18.9",
+    "rn-range-slider": "^2.2.2",
     "typescript": "^4.6.3",
     "yup": "^1.0.0"
   },
