--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@stripe/stripe-react-native": "^0.25.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "aws-amplify": "^5.0.16",
