--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -29,6 +29,7 @@
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "mobx-state-tree": "^5.1.7",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
