--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -43,6 +43,7 @@
     "react-native-select-dropdown": "^3.3.0",
     "react-native-web": "~0.18.9",
     "rn-range-slider": "^2.2.2",
+    "react-native-webview": "^11.26.1",
     "typescript": "^4.6.3",
     "yup": "^1.0.0"
   },
