--- a/frontend/odyssey/package.json
+++ b/frontend/odyssey/package.json
@@ -33,6 +33,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^5.2.0",
     "react-native-paper-dates": "^0.12.0",
